# nebriq-model-classifier

./: .gitignore  README.md  pyproject.toml
data/: dataset.csv  dataset.py
scripts/: dataset.py  inference.py  train.py
